--- a/music-App/frontend/src/App.css
+++ b/music-App/frontend/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2vh;
   text-align: center;
 }
 
@@ -9,16 +9,16 @@
   position: absolute;
   top: 0vh;
   left: 0;
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 2vh;
+  margin-bottom: 2vh;
   /* color:  #FFE6AF */
 }
 .subheader {
   position: absolute;
   top: 5vh;
   left: 0;
-  font-size: 1.5rem;
-  margin-bottom: 2rem;
+  font-size: 1.5vh;
+  margin-bottom: 2vh;
   /* color: #FFE6AF */
 }
 
@@ -26,8 +26,8 @@
   position: absolute;
   top: 0vh;
   right: 7.5vw;
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 2vh;
+  margin-bottom: 2vh;
   text-decoration: underline;
   /* color: #FFE6AF */
 }
@@ -58,8 +58,8 @@
   position: absolute;
   top: 7.5vh;
   right: 0vw;
-  font-size: 1rem;
-  margin-bottom: 10rem;
+  font-size: 1vh;
+  margin-bottom: 10vh;
   width: 28vw;
   /* color: #FFE6AF */
   
@@ -68,8 +68,8 @@
   position: absolute;
   top: 5vh;
   left: 0;
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 2vh;
+  margin-bottom: 2vh;
 }
 
 .journaling
@@ -89,8 +89,8 @@
   position: absolute;
   top: 50vh;
   left: 0;
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 2vh;
+  margin-bottom: 2vh;
   width: 20vw;
   height: 40vh;
   border: none;
@@ -115,7 +115,7 @@
 {
   display: flex;
   flex-direction: column;
-  margin-top: 2rem;
+  margin-top: 2vh;
 }
 
 .lyricsAHHH{
