--- a/music-App/frontend/src/App.css
+++ b/music-App/frontend/src/App.css
@@ -17,7 +17,7 @@
 }
 
 .header {
-  position: fluid;
+  position: absolute;
   top: 0vh;
   left: 0;
   font-size: 2rem;
@@ -25,7 +25,7 @@
   /* color:  #FFE6AF */
 }
 .subheader {
-  position: fluid;
+  position: absolute;
   top: 5vh;
   left: 0;
   font-size: 1.5rem;
@@ -34,7 +34,7 @@
 }
 
 .MONGO {
-  position: fluid;
+  position: absolute;
   top: 0vh;
   right: 7.5vw;
   font-size: 2rem;
@@ -66,7 +66,7 @@
   overflow-y: scroll; 
   max-height:90vh;
   padding: 0;
-  position: fluid;
+  position: absolute;
   top: 7.5vh;
   right: 0vw;
   font-size: 1rem;
@@ -76,7 +76,7 @@
   
 }
 .yourComponent{
-  position: fluid;
+  position: absolute;
   top: 5vh;
   left: 0;
   font-size: 2rem;
@@ -97,7 +97,7 @@
 }
 
 .video {
-  position: fluid;
+  position: absolute;
   top: 50vh;
   left: 0;
   font-size: 2rem;
