--- a/music-App/frontend/src/index.css
+++ b/music-App/frontend/src/index.css
@@ -8,6 +8,7 @@
   color: #ffffffde;
   /* background-color: #242424; */
 
+  width: 100%;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -24,9 +25,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  /* margin: 0; */
   display: flex;
-  place-items: center;
+  width: 100%;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
