--- a/music-App/frontend/src/index.css
+++ b/music-App/frontend/src/index.css
@@ -2,7 +2,7 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  overflow-y: hidden;
+  overflow: hidden;
 
   color-scheme: light dark;
   color: #ffffffde;
