--- a/music-App/frontend/src/App.css
+++ b/music-App/frontend/src/App.css
@@ -46,6 +46,29 @@
   gap: 5vw;
   
 }
+.combine-component.noJournals > .color-picker-wrapper,
+.combine-component.noJournals > .form {
+  flex: 1 1 0;
+  min-width: 0;
+}
+
+.combine-component.noEntry > .entry-list {
+  flex: 1;
+}
+
+.combine-component.noEntry .entry-list {
+  list-style-type: none;
+  overflow-y: scroll; 
+  max-height:90vh;
+
+  padding: 0;
+  top: 13vh;
+  right: 0vw;
+  font-size: 1.25rem;
+  margin-bottom: 11rem;
+  width: 100%;
+  
+}
 
 .entry-list {
   list-style-type: none;
@@ -61,12 +84,27 @@
   
 }
 
+.combine-component.noJournals .react-colorful{
+  /* max-width: 50%; */
+  width:100%;
+  max-width: none;
+  
+  /* height:100%; */
+}
+
+.combine-component.noJournals .color-picker-wrapper .video {
+  flex: 1; 
+  width: 50%;
+  height: 40%;
+  border: none;
+}
 .react-colorful {
   margin-top: 0vh;
   margin-left: 0vw;
   max-width: 20vw;
   width: auto;
 }
+
 .journaling
 {
   display:center;
@@ -86,7 +124,7 @@
   left: 0;
   font-size: 2rem;
   margin-bottom: 2rem;
-  width: 20vw;
+  width: 15vw;
   height: 20vh;
   border: none;
 }
@@ -106,6 +144,14 @@
     height:25vh;
 }
 
+.combine-component.noJournals .form {
+  display: flex;           
+  flex-direction: column;  
+  max-width: 50vw;         
+  width: 100%;       
+  right: 20%;      
+  box-sizing: border-box
+}
 .form {
   display: flex;           
   flex-direction: column;  
