--- a/music-App/frontend/src/App.css
+++ b/music-App/frontend/src/App.css
@@ -118,6 +118,7 @@
   margin-top: 10vh;
 }
 
+
 .video {
   position: absolute;
   top: 50vh;
@@ -128,11 +129,15 @@
   height: 20vh;
   border: none;
 }
+.combine-component.noEntry .entry-list .ahhhh {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+}
 
 .ahhhh {
   margin-top: 2vh;
   width: 28vw;
-  height: 30vh;
+  height: auto; 
   align-items: center;
   border: none;
 }
